--- a/sign.html
+++ b/sign.html
@@ -7,7 +7,7 @@
   <tr>
     <td style="width: 165px;">
       <img
-        src="https://lh3.googleusercontent.com/43om6cSDO2jbTsbABwTp04dn_Yp6eQKT3IDw12LIx6LoGU4NbjlPa49-x-Ug1wwLqRCH9RVYYwTiza9zLVnjVITZ60BDa0G-kzi2aNDyYGLL-jTdEMajf-z7g_sGcKw-_WLI4-v94qRFLzl9ccVjG1RBh1W1oeT9nxCRjBumWIYwhDe3AZC6HCOWORd74eEVoVYCTxFbhPRgGKZqKiqjCeKGyIVSFnTdbE4r2K1Dm7jbjURCJMFw8Y3AD4kmC-YI8tMBZG961wQWeFEfYYqd26-BvoOxaAK8DErMzx3vnrBv_7-mWEHezHNP6GG4GHe61eyq7XCbdE2rNzVgbmY0v5L2Jn2YpKlZWg3D_pwZYnKFpunml-UqumzpsPxTPwLKQA2_ohs0QWxK6aQgR_buFFim7M1MBndtqwXXW1qX1Gz-vQMR4KbPqvY0rRHjAEwDiYlJA01d0Mtaykzxr-vH29Mwocxz5Ni93VQ5BadOvrUv_M_zhM3c-Y4GOrsLo-aZkM-cOHDC4tHcrnSZoBPFBW7EPlaSttz0ugtZ0a6LI_qUkcng0jWn99iofyiMxa0A1aGG1RZCGFRVnEIwKmaWV3ns6LwNSWxoqCtlDd5JtMDBqWsYOZOQcdgMhCzZSzIoOnkMq2tWQunPyNeDXAUkZefvSvsVjOMqVT4ovZp6LmC8tUGc4Q=w293-h220-no"
+        src="https://drive.google.com/file/d/17yPMgQFndsIwfl5-NuxF0wo6Dc6LUoyB/view?usp=sharing"
         alt="Prashant Parmar"
         style="border-radius: 50%;"
       />
