--- a/sign.html
+++ b/sign.html
@@ -7,7 +7,7 @@
   <tr>
     <td style="width: 165px;">
       <img
-        src="https://drive.google.com/file/d/17yPMgQFndsIwfl5-NuxF0wo6Dc6LUoyB/view?usp=sharing"
+        src="https://github.com/touchwood1992/emailsignature/blob/master/prashant%20photo.jpg"
         alt="Prashant Parmar"
         style="border-radius: 50%;"
       />
