--- a/sign.html
+++ b/sign.html
@@ -7,7 +7,7 @@
   <tr>
     <td style="width: 165px;">
       <img
-        src="https://github.com/touchwood1992/emailsignature/blob/master/prashant%20photo.jpg"
+        src="https://raw.githubusercontent.com/touchwood1992/emailsignature/master/prashant%20photo.jpg"
         alt="Prashant Parmar"
         style="border-radius: 50%;"
       />
